<resources>
    <string name="app_name">Assigment1</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="age">Date of Birth</string>
    <string name="email">e-mail</string>
    <string name="phone">PhoneNo.</string>
    <string name="submit">Submit</string>
    <string name="file">file</string>
    <string name="obj">Pref. Obj.</string>
    <string-array name="postname">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Ms.</item>
    </string-array>
    <string name="set">set</string>
</resources>
